@@ -1,4 +1,3 @@
-- save the gateway stuff
 - complete the locations stuff
 - add modem devices
 - warn if the user changes hostname
